--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,5 +1,12 @@
-{"properties": [{
-  "name": "hibernate.connection.autocommit",
-  "type": "java.lang.String",
-  "description": "A description for 'hibernate.connection.autocommit'"
-}]}
+{"properties": [
+  {
+    "name": "hibernate.connection.autocommit",
+    "type": "java.lang.String",
+    "description": "A description for 'hibernate.connection.autocommit'"
+  },
+  {
+    "name": "storage.location",
+    "type": "java.lang.String",
+    "description": "A description for 'storage.location'"
+  }
+]}
