--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,6 +27,16 @@ spring:
   web : 
     resources :
       static-locations : classpath:/resources
+# max file size
+  servlet:
+    multipart:
+      max-file-size : 10MB
+# max request size
+      max-request-size: 10MB
+      enabled: true
 hibernate : 
   connection : 
     autocommit : false
+
+storage:
+  location: ./uploads
