--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,9 @@ spring:
     username : volumendev1
     password : password
     driver-class-name : org.postgresql.Driver
+  sql:
+    init:
+      mode: always # to run schema.sql
   jpa : 
     show-sql: true
     hibernate :
